--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,31 @@
         <title>Gilvano Freitas</title>
     </head>
     <body>
-        Gilvano FF
+      <header>
+          <h1>Gilvano Freitas</h1>
+      </header>
+      <section>
+          <header>
+              <h2>Posts</h2>
+          </header>
+          <article>
+              <header>
+                  <h3>Post #1</h3>
+              </header>
+              <p>
+                Um total de 84% dos executivos diz que não alcançarão seus objetivos
+                 de crescimento sem expandir a Inteligência Artificial. 
+                Eles aproveitaram a <a href="https://www.accenture.com/br" target="_blank">Inteligência Artificial</a> em áreas
+                 do negócio para<a href="mailto:gilvano@email.com"> liberar</a> novas eficiências e aumentar a produtividade.
+                 Mas quando você expande a Inteligência Artificial,
+                  é possível obter resultados completamente novos.
+                 A pergunta que não quer calar: como se faz isso?
+              </p>
+          </article>
+      </section>
+      <footer>
+          
+      </footer>
+
     </body>
 </html>
