usar texto, imagens e organizar listas

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
       <header>
+          <img src="foto1.jpg" alt="Ilustração de desenvolvimento" width="200" height="200" >
           <h1>Gilvano Freitas</h1>
       </header>
       <section>
@@ -15,6 +16,7 @@
           <article>
               <header>
                   <h3>Post #1</h3>
+                  <img src="foto2.jpg" alt="Ilustração de desenvolvimento" width="800" height="400">
               </header>
               <p>
                 Um total de 84% dos executivos diz que não alcançarão seus objetivos
@@ -28,7 +30,17 @@
           </article>
       </section>
       <footer>
-          
+            <ol>
+                <li>
+                    <a href="mailto:gil23.260@gmail.com">gil23.260@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/gilvano-freitas-5736b41a0/" target="_blank">Linkedin</a>
+                </li>
+                <li>
+                    <a href="https://github.com/Gilvano333" target="_blank">GitHub</a>
+                </li>
+            </ol>
       </footer>
 
     </body>
